changed quote orientation

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                     <div class="row smooth-scroll">
                         <div class="col-lg-12 mx-auto">
                             <div class="wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
-                                <p class="lead mt-5 pt-4 text-center font-italic" style="color: #18da68;font-size: 22px;">“Design transcends agenda. It speaks to the politics of optimism.” –Paul Bennett</p>
+                                <p class="lead text-left font-italic" style="color: #18da68;font-size: 22px;">“Design transcends agenda.</p>
+                                <p class="lead text-left font-italic" style="color: #18da68;font-size: 22px;">It speaks to the politics of optimism.”</p>
+                                <p class="lead text-left font-italic" style="color: #18da68;font-size: 22px;"> –Paul Bennett</p>
                             </div>
                         </div>
                     </div>
