--- a/index.html
+++ b/index.html
@@ -259,10 +259,11 @@
                 <div class="line"></div>
                 
                 <!--Section sescription-->
-                <p class="section-description" style=" color: #959595;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+                <p class="section-description" style=" color: #959595;">If you'd like to contact me Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
 
                 <div class="row">
 
+                <div class="form">
                     <!--First column-->
                     <div class="col-md-8">
                         <form>
