changing the margin on panel 1 backgroudn image

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </nav>
 
 <!-- First header section -->
-		<header class="masthead" style="background-color: grey; padding-top: 300px; background-image: url(assets/images/guy.jpeg); background-size: 100% 100%;">
+		<header class="masthead" style="background-color: grey; padding-top: 300px; margin-bottom: -150px; background-image: url(assets/images/guy.jpeg); background-size: 100% 100%;">
 		      <div class="intro-body" id="home">
 		        <div class="container h-100 d-flex justify-content-end align-items-center"">
 		          <div class="row smooth-scroll">
@@ -216,13 +216,13 @@
                                 <figure class="col-md-4">
                                     <a href="https://calm-crag-26484.herokuapp.com/">
                                         <img src="assets/images/politics-pals.jpg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68;"></a>
-                                    <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595">| Politcs Pals</p>
+                                    <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595">| Politcs Pals - Friend Finder</p>
                                 </figure>
 
                                <figure class="col-md-4">
                                     <a href="https://jackson-harris-iii.github.io/project1/"> 
                                         <img src="assets/images/level-up.jpg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68;"></a>
-                                    <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595">| Level Up - Self Betterment</p>
+                                    <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595">| Level Up - Self Improvement</p>
                                 </figure>
                                 
                                 <figure class="col-md-4">
