deleted word in contact panel

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <div class="line"></div>
                 
                 <!--Section sescription-->
-                <p class="section-description fonts" style=" color: #959595;">If you'd like to contact me for more information regarding my work, potential job opportunities, project consulations, or additional questions you may have please fill out the form below or email me via my contact information below.</p>
+                <p class="section-description fonts" style=" color: #959595;">If you'd like to contact me for more information regarding my work, potential job opportunities, project consulations, or additional questions you may have please fill out the form below or email me via my contact e-mail below.</p>
 
                 <div class="row">
 
