deleted text from my projects

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <div class="col-md-2"></div>
                     </div>
                     <div class="container">
-                    <p class="lead mt-5 pt-4 text-center fonts" style="color: #959595; margin-bottom: 50px;">While undertaking client needs, desires and goals, it is my aspiration to personally provide a unique design and solution to a given problem. In order for a website to be considered seriously by a anyone visiting (even if the concept, idea or product being sold is on point), the site must be strategically built. It must be sexy, smart, sleak, polished, professional, attention-getting, and so much more. Most people don't notice a very well designed website until they've vistited a bad one. I take all of this under consideration in my mission to provide the best product possible. A few of my projects are shown below. Feel free to click to see more. 
+                    <p class="lead mt-5 pt-4 text-center fonts" style="color: #959595; margin-bottom: 50px;">In order for a website to be considered seriously by a anyone visiting even if the concept, idea or product being sold is on point, the site must be strategically built. It must be sexy, smart, sleak, polished, professional, attention-getting, and so much more. Capturing these elements is crucial to design. A few of my projects are shown below. Feel free to click to see more. 
                     .</p>
                     </div>
                     <!--First row-->
@@ -297,7 +297,7 @@
                         </form>
 
                         <div class="text-center text-md-left">
-                            <a class="btn btn-lg waves-effect" style="background-color: #18da68; margin-top: 20px;"><strong style="color: black;">Send</strong></a>
+                            <a class="btn btn-lg waves-effect" href="mailto:tann3rjm129@gmail.com" style="background-color: #18da68; margin-top: 20px;"><strong style="color: black;">Send</strong></a>
                         </div>
                     </div>
                     <!--.First column-->
