pic change attempt 3

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                                 <figure class="col-md-4">
                                     <a href="https://infinite-thicket-94749.herokuapp.com/"> 
-                                        <img src="assets/images/burger.jpg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
+                                        <img src="assets/images/burger.jpeg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
                                     <div>
                                         <a class="nav-link waves-effect waves-light" href="https://github.com/tann3rjm129/burger"><i class="fa fa-github fa-2x" style="color: #959595; float: right; margin-top: 15px;" aria-hidden="true"></i></a>
                                         <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Burger DB - Synchronized Database</p>
@@ -212,7 +212,7 @@
 
                                 <figure class="col-md-4">
                                     <a href="https://tann3rjm129.github.io/NYTapp/"> 
-                                        <img src="assets/images/nytSearch.jpg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
+                                        <img src="assets/images/nytSearch.jpeg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
                                     <div>
                                         <a class="nav-link waves-effect waves-light" href="https://github.com/tann3rjm129/NYTapp"><i class="fa fa-github fa-2x" style="color: #959595; float: right; margin-top: 15px;" aria-hidden="true"></i></a>
                                         <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| NYT - Article Search App</p>
