changes to figure headings

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                         <img src="assets/images/think-ink.jpg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
                                     <div>
                                         <a class="nav-link waves-effect waves-light" href="https://github.com/tann3rjm129/Think-Ink"><i class="fa fa-github fa-2x" style="color: #959595; float: right; margin-top: 15px;" aria-hidden="true"></i></a>
-                                        <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Think Ink - Tattoo Artist Database</p>
+                                        <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Think Ink - Tattoo Artist DB</p>
                                     </div>
                                 </figure>
 
@@ -195,7 +195,7 @@
                                         <img src="assets/images/level-up.jpeg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
                                     <div>
                                         <a class="nav-link waves-effect waves-light" href="https://github.com/tann3rjm129/Level-Up"><i class="fa fa-github fa-2x" style="color: #959595; float: right; margin-top: 15px;" aria-hidden="true"></i></a>
-                                        <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Level Up - Self Improvement App</p>
+                                        <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Level Up - Self Improve App</p>
                                     </div>
                                 </figure>
                                 
@@ -206,7 +206,7 @@
                                         <img src="assets/images/burger.jpeg" class="img-fluid z-depth-1 .zoom" style="box-shadow: 8px 8px #18da68; width: 600px; height: 250px;"></a>
                                     <div>
                                         <a class="nav-link waves-effect waves-light" href="https://github.com/tann3rjm129/burger"><i class="fa fa-github fa-2x" style="color: #959595; float: right; margin-top: 15px;" aria-hidden="true"></i></a>
-                                        <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Burger DB - Synchronized Database</p>
+                                        <p class="text-uppercase font-weight-bold mt-4 fonts" style="color: #959595; font-size: 18px; float: left; margin-top: 10px; padding-top: 5px;">| Burger DB - Synchronized</p>
                                     </div>
                                 </figure>
 
